infer/tests/codetoanalyze/cpp/errors/constructors/constructor_new.cpp
../../frontend/constructors/constructor_new.cpp